[gd_scene load_steps=21 format=3 uid="uid://cjasr8poh6k2w"]

[ext_resource type="Theme" uid="uid://bm27tr578c2pr" path="res://theme.tres" id="1_5jpot"]
[ext_resource type="Script" path="res://levels/main_menu.gd" id="1_ljjrr"]
[ext_resource type="PackedScene" uid="uid://1bd7x4jyufex" path="res://levels/level_01.tscn" id="2_7vchw"]
[ext_resource type="Texture2D" uid="uid://cy00ccpign4pt" path="res://logo.png" id="3_bvpn7"]
[ext_resource type="Texture2D" uid="uid://b34gxxoqk7fr0" path="res://godot.png" id="4_eyaib"]
[ext_resource type="Texture2D" uid="uid://d2sbdukffe108" path="res://player/wizard.png" id="4_f0ojw"]
[ext_resource type="Texture2D" uid="uid://cd747wv1lg0jd" path="res://collectible/stopwatch.png" id="5_t7q0j"]
[ext_resource type="Texture2D" uid="uid://bulbddbspch2w" path="res://story_background.png" id="7_0om45"]
[ext_resource type="Texture2D" uid="uid://dux55je6ygqd8" path="res://collectible/wind.png" id="8_cdrqq"]
[ext_resource type="Texture2D" uid="uid://bbeparltukhfg" path="res://ending_background.png" id="9_lhiq5"]
[ext_resource type="Texture2D" uid="uid://s16tcejxl5ht" path="res://player/wizard_color.png" id="10_dnv77"]

[sub_resource type="AtlasTexture" id="AtlasTexture_xfoom"]
atlas = ExtResource("4_f0ojw")
region = Rect2(0, 0, 33, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_yrb6a"]
atlas = ExtResource("4_f0ojw")
region = Rect2(33, 0, 33, 54)

[sub_resource type="SpriteFrames" id="SpriteFrames_4qstj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xfoom")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yrb6a")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_rkprn"]
atlas = ExtResource("5_t7q0j")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gp0b6"]
atlas = ExtResource("5_t7q0j")
region = Rect2(32, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_3s6kg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rkprn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gp0b6")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_24gkp"]
atlas = ExtResource("10_dnv77")
region = Rect2(0, 0, 33, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_xm6xh"]
atlas = ExtResource("10_dnv77")
region = Rect2(33, 0, 33, 54)

[sub_resource type="SpriteFrames" id="SpriteFrames_7kbss"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_24gkp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xm6xh")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_5jpot")
script = ExtResource("1_ljjrr")
first_level = ExtResource("2_7vchw")

[node name="Menu" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="Menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -156.0
offset_top = -140.0
offset_right = 156.0
offset_bottom = -78.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_bvpn7")

[node name="VBoxContainer" type="VBoxContainer" parent="Menu"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -62.0
offset_top = 43.0
offset_right = 63.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Play" type="Button" parent="Menu/VBoxContainer"]
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Play"

[node name="Credits" type="Button" parent="Menu/VBoxContainer"]
layout_mode = 2
text = "Credits"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Menu"]
position = Vector2(497, 318)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_4qstj")
autoplay = "default"

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="Menu"]
position = Vector2(153, 314)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_3s6kg")
autoplay = "default"

[node name="Music" type="CheckBox" parent="Menu"]
layout_mode = 0
offset_left = 243.0
offset_top = 380.0
offset_right = 317.0
offset_bottom = 411.0
button_pressed = true
text = "Music"

[node name="SFX" type="CheckBox" parent="Menu"]
layout_mode = 0
offset_left = 329.0
offset_top = 380.0
offset_right = 403.0
offset_bottom = 411.0
button_pressed = true
text = "SFX"

[node name="Credits" type="Control" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Credits"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 17.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Credits/VBoxContainer"]
layout_mode = 2
text = "All of the content and game behavior for this game was created by:"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="Credits/VBoxContainer"]
layout_mode = 2
text = "Josh Carlson (paperish - https://paperish.itch.io)
Additional Level Design by Asheley Carlson"
horizontal_alignment = 1

[node name="Label5" type="Label" parent="Credits/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1

[node name="Label3" type="Label" parent="Credits/VBoxContainer"]
layout_mode = 2
text = "Except for the following:"
horizontal_alignment = 1

[node name="Label4" type="Label" parent="Credits/VBoxContainer"]
layout_mode = 2
text = "Godot Smoothing Addon - Addon by lawnjelly
Upbeat Funk Commercial - Music from Pixabay.com
Fanfare & Medium Explosion - SFX from Pixabay.com
Explosion Animations Pack by ansimuz - Image from itch.io"
horizontal_alignment = 1

[node name="Label" type="Label" parent="Credits"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -37.0
offset_top = -195.0
offset_right = 47.0
offset_bottom = -169.0
grow_horizontal = 2
grow_vertical = 0
text = "Made With"

[node name="TextureRect" type="TextureRect" parent="Credits"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -127.0
offset_top = -184.0
offset_right = 2406.0
offset_bottom = 840.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.1, 0.1)
texture = ExtResource("4_eyaib")

[node name="Back" type="Button" parent="Credits"]
custom_minimum_size = Vector2(125, 0)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -61.0
offset_top = -69.0
offset_right = 64.0
offset_bottom = -38.0
grow_horizontal = 2
grow_vertical = 0
text = "Main Menu"

[node name="AnimatedSprite2D3" type="AnimatedSprite2D" parent="Credits"]
position = Vector2(541, 365)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_4qstj")
autoplay = "default"

[node name="AnimatedSprite2D4" type="AnimatedSprite2D" parent="Credits"]
position = Vector2(100, 376)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_3s6kg")
autoplay = "default"

[node name="Story1" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="Story1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_0om45")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Story1"]
position = Vector2(227, 370)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_4qstj")
autoplay = "default"

[node name="Label" type="Label" parent="Story1"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -217.0
offset_top = 50.0
offset_right = 217.0
offset_bottom = 102.0
grow_horizontal = 2
text = "Perfect! I have all the ingredients I need to cast my spell.
Dandelion root, fuzz from a kiwifruit, and an old guitar string.
Let's just put them in the cauldron..."
horizontal_alignment = 1

[node name="Next" type="Button" parent="Story1"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -62.0
offset_top = -41.0
offset_right = -17.0
offset_bottom = -10.0
grow_horizontal = 0
grow_vertical = 0
text = "Next"

[node name="Story2" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="Story2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_0om45")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Story2"]
position = Vector2(321, 373)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_4qstj")
autoplay = "default"

[node name="Label" type="Label" parent="Story2"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -217.0
offset_top = 50.0
offset_right = 217.0
offset_bottom = 102.0
grow_horizontal = 2
text = "Excellent. Now to play the special 
\"Fmaj11sus4 add(6)\" chord on my pipe organ..."
horizontal_alignment = 1

[node name="Next" type="Button" parent="Story2"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -92.0
offset_top = -41.0
offset_right = -17.0
offset_bottom = -10.0
grow_horizontal = 0
grow_vertical = 0
text = "Next"

[node name="Story3" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="Story3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_0om45")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Story3"]
position = Vector2(194, 375)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_4qstj")
autoplay = "default"
flip_h = true

[node name="Label" type="Label" parent="Story3"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -217.0
offset_top = 50.0
offset_right = 217.0
offset_bottom = 102.0
grow_horizontal = 2
text = "OH NO!!! Someone has stolen some parts from my organ!!
But if I don't cast the spell right now, I will literally EXPLODE!!"
horizontal_alignment = 1

[node name="Next" type="Button" parent="Story3"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -92.0
offset_top = -41.0
offset_right = -17.0
offset_bottom = -10.0
grow_horizontal = 0
grow_vertical = 0
text = "Next"

[node name="Story4" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="Story4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_0om45")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Story4"]
position = Vector2(533, 377)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_4qstj")
autoplay = "default"

[node name="Wind" type="Sprite2D" parent="Story4"]
position = Vector2(477, 387)
scale = Vector2(2, 2)
texture = ExtResource("8_cdrqq")
flip_h = true

[node name="Label" type="Label" parent="Story4"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -217.0
offset_top = 50.0
offset_right = 217.0
offset_bottom = 102.0
grow_horizontal = 2
text = "I will use another spell to STOP TIME so I don't explode, 
but it only works when I'm not moving - better get my parts back quick!"
horizontal_alignment = 1

[node name="Next" type="Button" parent="Story4"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -92.0
offset_top = -41.0
offset_right = -17.0
offset_bottom = -10.0
grow_horizontal = 0
grow_vertical = 0
text = "Next"

[node name="Ending1" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="Ending1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("9_lhiq5")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Ending1"]
position = Vector2(484, 375)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_7kbss")
autoplay = "default"
flip_h = true

[node name="Label" type="Label" parent="Ending1"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -217.0
offset_top = 50.0
offset_right = 217.0
offset_bottom = 102.0
grow_horizontal = 2
text = "I knew I could do it! A wizard is never late, after all.
And with the organ restored, my spell is complete!
My hat is the coolest in the land!"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="Ending1"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -87.0
offset_top = -36.0
offset_right = 88.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 20
text = "THANKS FOR PLAYING!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Credits" type="Button" parent="Ending1"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -92.0
offset_top = -41.0
offset_right = -17.0
offset_bottom = -10.0
grow_horizontal = 0
grow_vertical = 0
text = "Credits"

[connection signal="pressed" from="Menu/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="toggled" from="Menu/Music" to="." method="_on_music_toggled"]
[connection signal="toggled" from="Menu/SFX" to="." method="_on_sfx_toggled"]
[connection signal="pressed" from="Credits/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Story1/Next" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Story2/Next" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Story3/Next" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Story4/Next" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Ending1/Credits" to="." method="_on_credits_pressed"]
